grammar.js
    template: ($) => repeat1(choice($.template_node, $.content)),
    // the tags of a group; see startTag
    content: ($) => prec.right(repeat1(choice($._text, $._text_brace))),
    /**
     * Template text up to a "{{", "{%" or "{#". A "{" that is text only because
     * of what comes after the next character, as in "a{{% if x %}" or a "{" at
     * the end of input, is _text_brace from the scanner; see
     * scan_text_brace_rest.
     */
    _text: ($) => /(?:[^\{]|\{[^\{#%])+/,
    // the separator between the parts of a tag; see SEP
    filtered_value: ($) =>
      seq($.value, optional(seq("|", $.filter_expression))),
    filter_expression: ($) => seq($.filter, repeat(seq("|", $.filter))),
    value: ($) => choice($.literal, $.variable_attribute),
    literal: ($) =>
      choice($.number, $.string, $.translated_string, $.boolean, $.none),
    /**
     * Digits, with single underscores allowed between them, as Python's int()
     * and float() accept ("1_000") and Django's Variable relies on.
     *
     * A trailing dot needs an exponent after it. Variable calls float() and
     * then rejects what it just parsed if the last character is a dot — the
     * comment in Django reads `# "2." is invalid` — so "1." is a two-part
     * lookup there rather than a number, while "1.e5" is a float.
     */
    number: ($) =>
      /[-+]?(?:(?:[0-9](?:_?[0-9])*(?:\.[0-9](?:_?[0-9])*)?|\.[0-9](?:_?[0-9])*)(?:[eE][0-9](?:_?[0-9])*)?|[0-9](?:_?[0-9])*\.[eE][0-9](?:_?[0-9])*)/,
    string: ($) => STRING,
    /**
     * A string to translate at render time. Django matches "_(" and ")" as
     * part of the constant itself, so nothing may come between them and the
     * string: "_( 'a' )" is a syntax error there, not a translated literal.
     */
    attribute: ($) => /[a-zA-Z0-9][a-zA-Z0-9_]*(?:\.[a-zA-Z0-9][a-zA-Z0-9_]*)*/,
    variable_attribute: ($) =>
      seq($.identifier, optional(seq(".", $.attribute))),
    identifier: ($) => /[a-zA-Z][a-zA-Z0-9_]*/,
    binaryOperator: ($) =>
      choice(
        "and",
        "or",
        "==",
        "!=",
        "<",
        ">",
        "<=",
        ">=",
        "in",
        prec.dynamic(1, joined("not", "in")),
        "is",
        prec.dynamic(1, joined("is", "not")),
      ),
    predicate: ($) =>
      seq(
        repeat(seq("not", SEP)),
        $.filtered_value,
        repeat(
          seq(
            part($.binaryOperator),
            repeat(part("not")),
            part($.filtered_value),
          ),
        ),
      ),
    template_variable: ($) =>
      seq(
        "{{",
        optional(SEP),
        alias($._filtered_value_spaced, $.filtered_value),
        optional(SEP),
        "}}",
      ),
    /**
     * Everything between "{{" and "}}" reaches Django as a single expression,
     * so whitespace may surround a pipe there. Inside a tag it may not: the
     * contents are split on whitespace before each argument is parsed, which
     * would leave a bare "|" as an argument of its own.
     */
    _filtered_value_spaced: ($) =>
      seq(
        $.value,
        optional(
          seq(
            optional(SEP),
            "|",
            optional(SEP),
            alias($._filter_expression_spaced, $.filter_expression),
          ),
        ),
      ),
    filter: ($) =>
      choice(
        field(
          "filter_name",
          choice(
            ...FILTERS_WITHOUT_ARGUMENT,
            ...I18N_FILTERS_WITHOUT_ARGUMENT,
            ...L10N_FILTERS_WITHOUT_ARGUMENT,
            ...TZ_FILTERS_WITHOUT_ARGUMENT,
          ),
        ),
        seq(
          field(
            "filter_name",
            choice(...FILTERS_WITH_ARGUMENT, ...TZ_FILTERS_WITH_ARGUMENT),
          ),
          ":",
          field("argument", $.value),
        ),
        seq(
          field("filter_name", choice(...FILTERS_WITH_OPTIONAL_ARGUMENT)),
          optional(seq(":", field("argument", $.value))),
        ),
        $._custom_filter,
      ),
    /**
     * A filter a "load" brought in: its name is not known here, and so neither
     * is whether it takes an argument. Hidden, so the tree is the same as if
     * it were spelled inline, but named so that a grammar extending this one
     * can drop it from filter's alternatives the way it can drop custom_tag
     * from template_tag.
     */
    _custom_filter: ($) =>
      seq(
        field("filter_name", $.identifier),
        optional(seq(":", field("argument", $.value))),
      ),
    else_tag: ($) => followTag("else"),
    else_block: ($) => seq($.else_tag, optional($.template)),
    if_group: ($) =>
      seq(
        $.if_block,
        repeat($.elif_block),
        optional($.else_block),
        choice($.endif_tag, alias($._missing_tag, $.missing_endif_tag)),
      ),
    ifchanged_tag: ($) => startTag("ifchanged", repeat(part($.filtered_value))),
    ifchanged_block: ($) => seq($.ifchanged_tag, optional($.template)),
    endifchanged_tag: ($) => endTag("endifchanged"),
    ifchanged_group: ($) =>
      seq(
        $.ifchanged_block,
        optional($.else_block),
        choice(
          $.endifchanged_tag,
          alias($._missing_tag, $.missing_endifchanged_tag),
        ),
      ),
    /**
     * do_include takes "with" and "only" in either order and refuses one it has
     * already been given, and "with" needs at least one argument. It calls
     * token_kwargs with support_legacy=False, so "{% include "t" with a as b %}"
     * is an error here as it is there, unlike the same clause in "{% with %}".
     */
    language_group: ($) =>
      seq(
        $.language_block,
        choice(
          $.endlanguage_tag,
          alias($._missing_tag, $.missing_endlanguage_tag),
        ),
      ),
    library: ($) => seq($.identifier, optional(seq(".", $.identifier))),
    load_tag: ($) =>
      tag(
        "load",
        choice(
          seq(repeat1(part($.identifier)), part("from"), part($.library)),
          repeat1(part($.library)),
        ),
      ),
    /**
     * django.templatetags.l10n. The argument is optional and localize_tag
     * rejects anything but "on" or "off", including a second word.
     */
    localize_group: ($) =>
      seq(
        $.localize_block,
        choice(
          $.endlocalize_tag,
          alias($._missing_tag, $.missing_endlocalize_tag),
        ),
      ),
    /** django.templatetags.tz, taking "on" or "off" as localize does. */
    unexpected_tag: ($) =>
      choice(
        prec.dynamic(
          -2,
          seq(
            $.simpleTagOpen,
            field("tag_name", choice(...NAMES_INSIDE_A_TAG_GROUP)),
            optional($.unexpected_argument),
            $._group_held,
            optional(SEP),
            "%}",
          ),
        ),
        prec.dynamic(
          -4,
          seq(
            $.simpleTagOpen,
            field("tag_name", choice(...NAMES_INSIDE_A_TAG_GROUP)),
            $.simpleTagClose,
          ),
        ),
      ),
    /**
     * Words a tag does not take, kept inside the tag they were written in. Every
     * close utility accepts them before its "%}", so a misused tag keeps its own
     * node, "{% else x %}" is still the else of its group, and error recovery
     * has nothing to repair. queries/errors.scm reports it.
     */
    unexpected_argument: ($) => repeat1($._unexpected_word),
    /**
     * One word of an unexpected_argument, costing -1 of dynamic precedence of
     * its own, so that a reading flagging more words than it must always loses:
     * "{% cycle a b as x silent zqx %}" flags zqx, not everything after a.
     *
     * The word is a token of lexical precedence -1, so that a token an argument
     * really takes wins wherever one is valid, even over a longer match:
     * "b|upper" is still a filtered value. Where a keyword is valid, as after
     * "{% for a in b" where "reversed" may follow, tree-sitter lexes every word
     * as an identifier to check for the keyword, so an identifier is a word
     * here too, followed by whatever touches it ("a=2", "x.y|upper"). It is
     * aliased so that queries/locals.scm does not take it for a reference.
     *
     * A word never holds "}}": tree-sitter shares lexer states between parse
     * states, so the token is tried inside {{ }} as well, and after "{{ x|" it
     * would swallow the closing braces and leave recovery nothing to close with.
     */
    _unexpected_word: ($) =>
      prec.dynamic(
        -1,
        seq(
          SEP,
          choice(
            token(prec(-1, /(?:[^\s%}]|\}[^\s%}])+/)),
            seq(
              alias($.identifier, "unexpected_word"),
              optional(token.immediate(prec(-1, /(?:[^\s%}]|\}[^\s%}])+/))),
            ),
          ),
        ),
      ),
    /**
     * A "name=value" argument whose name a tag with a known signature does not
     * take. The scanner's _kwarg_name reads any name followed by "=", which
     * commits the parser to a keyword argument before the name is known, so
     * the name the signature lacks is taken here rather than after the tag.
     */
