test/corpus/if.txt
==================
If Basic
==================

{% if user.is_authenticated %}
Hi
{% endif %}

---

(template
  (content)
  (if_group
    (if_clause
      (predicate
        (filtered_value
          (value
            (variable_attribute
              (identifier)
              (attribute)))))
      (template
        (content))))
  (content))

==================
If With Not
==================

{% if not done %}
working
{% endif %}

---

(template
  (content)
  (if_group
    (if_clause
      (predicate
        (filtered_value
          (value
            (variable_attribute
              (identifier)))))
      (template
        (content))))
  (content))

==================
If With Elif And Else
==================

{% if count == 1 %}
one
{% elif count == 2 %}
two
{% else %}
other
{% endif %}

---

(template
  (content)
  (if_group
    (if_clause
      (predicate
        (filtered_value
          (value
            (variable_attribute
              (identifier))))
        (binaryOperator)
        (filtered_value
          (value
            (literal
              (number)))))
      (template
        (content)))
    (elif_clause
      (predicate
        (filtered_value
          (value
            (variable_attribute
              (identifier))))
        (binaryOperator)
        (filtered_value
          (value
            (literal
              (number)))))
      (template
        (content)))
    (else_clause
      (template
        (content))))
  (content))

==================
If With Complex Predicate
==================

{% if not done and count in valid_counts and status is not none or tags|length >= 3 %}
yes
{% endif %}

---

(template
  (content)
  (if_group
    (if_clause
      (predicate
        (filtered_value
          (value
            (variable_attribute
              (identifier))))
        (binaryOperator)
        (filtered_value
          (value
            (variable_attribute
              (identifier))))
        (binaryOperator)
        (filtered_value
          (value
            (variable_attribute
              (identifier))))
        (binaryOperator)
        (filtered_value
          (value
            (variable_attribute
              (identifier))))
        (binaryOperator)
        (filtered_value
          (value
            (variable_attribute
              (identifier))))
        (binaryOperator)
        (filtered_value
          (value
            (variable_attribute
              (identifier)))
          (filter_expression
            (filter)))
        (binaryOperator)
        (filtered_value
          (value
            (literal
              (number)))))
      (template
        (content))))
  (content))

==================
If Operator Adjacent To Value
:error
==================

{% if 1and 2 %}yes{% endif %}

---
