test/corpus/load.txt
==================
Load Single Library
==================

{% load static %}

---

(template
  (content)
  (load_tag
    (library
      (identifier)))
  (content))

==================
Load Multiple Libraries
==================

{% load i18n static %}

---

(template
  (content)
  (load_tag
    (library
      (identifier))
    (library
      (identifier)))
  (content))

==================
Load Dotted Library
==================

{% load django.contrib %}

---

(template
  (content)
  (load_tag
    (library
      (identifier)
      (identifier)))
  (content))

==================
Load Names From Library
==================

{% load humanize naturaltime from django %}

---

(template
  (content)
  (load_tag
    (identifier)
    (identifier)
    (library
      (identifier)))
  (content))
