test/corpus/lorem.txt
==================
Lorem Words
==================

{% lorem 3 w %}

---

(template
  (content)
  (lorem_block
    (filtered_value
      (value
        (literal
          (number)))))
  (content))

==================
Lorem Paragraphs Random
==================

{% lorem 2 p random %}

---

(template
  (content)
  (lorem_block
    (filtered_value
      (value
        (literal
          (number)))))
  (content))

==================
Lorem Method Adjacent To Count
:error
==================

{% lorem 5w %}

---

(ERROR)
